# mojo-aoc-2023

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: aocutil.mojo  day1.mojo
