[tool.poetry]
name = "mojo-aoc-2023"
version = "0.1.0"
description = "Avent of Code 2023 in Mojo"
authors = ["Thomas Gale <mail@thomasjamesgale.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
